--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@
   src: url("fonts/OpenSans-Regular.ttf");
 }
 
+@font-face {
+  font-family: OpenSansBold;
+  src: url("fonts/OpenSans-Bold.ttf");
+}
+
 body {
   min-width: 400px;
   padding: 0;
