--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ body {
 .close-popup {
   width: 20px;
   height: 20px;
+  cursor: pointer;
   background-image: url("images/close.svg");
 }
 
@@ -88,6 +89,7 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 20px;
+  cursor: pointer;
   background-image: url("images/help.svg");
 }
 
