--- a/login.css
+++ b/login.css
@@ -1,36 +1,10 @@
-
-@font-face {
-  font-family: OpenSans;
-  src: url("fonts/OpenSans-Regular.ttf");
-}
-@font-face {
-  font-family: OpenSansBold;
-  src: url("fonts/OpenSans-Bold.ttf");
-}
-/*
-#login-background {
-  height: 100%;
-  background-image: url("login_background.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-
-#login-root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(27, 27, 38, 0.6);
-}
-*/
-
 .rectangle640 {
-/*  width: 680px;
+  /*  width: 680px;
   height: 724px;
   border-radius: 22px;
   */
-  
-  margin: 30px 0 0 0;
+
+  /* margin: 30px 0 0 0; */
 
   background: #ffffff;
 
@@ -39,7 +13,6 @@
   justify-content: center;
 
   font-family: "OpenSans";
-  /*font-family: sans-serif; */
   position: relative;
 }
 
@@ -69,7 +42,7 @@
 
 #qrcode {
   margin: -20px;
-  min-height:256px;
+  min-height: 256px;
 }
 
 .rectangle1237c {
@@ -94,30 +67,10 @@
 .help-contact-white {
   display: flex;
   justify-content: space-between;
-  color:white;
+  color: white;
   width: 210px;
 }
 
-.login-page {
-  display:none;
-}
-
-.logout-div {
-  display:none;
-  cursor:pointer;
-}
-
-.logout-div div{
-  display: flex;
-  justify-content: flex-end;
-}
-
 .open-passhub-tab {
-  cursor:pointer;
-/*
-  display: flex;
-  justify-content:center;
-  padding: 5px 0;
-*/  
+  cursor: pointer;
 }
-
